// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DimensionItem matches the snapshot 1`] = `
<li
  name="Period"
  onClick={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderRadius": "2px",
      "cursor": "pointer",
      "display": "flex",
      "marginBottom": 3,
      "marginTop": 3,
      "minHeight": "24px",
    }
  }
>
  <div
    className="label"
    dataTest="undefined-button-pe"
    style={
      Object {
        "display": "flex",
        "outline": "none",
      }
    }
    tabIndex={0}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "padding": "3px 8px 0 8px",
        }
      }
    >
      <SvgClock16
        style={
          Object {
            "paddingBottom": "2px",
            "paddingLeft": "6px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "padding": "2px 5px 2px 0",
        }
      }
    >
      <span
        data-dimensionid="pe"
        style={
          Object {
            "color": "#212934",
            "fontSize": "14px",
            "userSelect": "none",
            "wordBreak": "break-word",
          }
        }
      >
        Period
      </span>
      <RecommendedIcon
        dataTest="undefined-recommended-icon"
        isRecommended={false}
      />
    </div>
  </div>
</li>
`;

exports[`DimensionItem matches the snapshot with locked 1`] = `
<li
  name="Period"
  onClick={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderRadius": "2px",
      "cursor": "pointer",
      "display": "flex",
      "marginBottom": 3,
      "marginTop": 3,
      "minHeight": "24px",
    }
  }
>
  <div
    className="label"
    dataTest="undefined-button-pe"
    style={
      Object {
        "display": "flex",
        "outline": "none",
      }
    }
    tabIndex={0}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "padding": "3px 8px 0 8px",
        }
      }
    >
      <SvgClock16
        style={
          Object {
            "paddingBottom": "2px",
            "paddingLeft": "6px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "padding": "2px 5px 2px 0",
        }
      }
    >
      <span
        data-dimensionid="pe"
        style={
          Object {
            "color": "#212934",
            "fontSize": "14px",
            "userSelect": "none",
            "wordBreak": "break-word",
          }
        }
      >
        Period
      </span>
      <RecommendedIcon
        dataTest="undefined-recommended-icon"
        isRecommended={false}
      />
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "padding": "3px 8px 0 8px",
        }
      }
    >
      <SvgLock16 />
    </div>
  </div>
</li>
`;

exports[`DimensionItem matches the snapshot with onOptionsClick 1`] = `
<li
  name="Period"
  onClick={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderRadius": "2px",
      "cursor": "pointer",
      "display": "flex",
      "marginBottom": 3,
      "marginTop": 3,
      "minHeight": "24px",
    }
  }
>
  <div
    className="label"
    dataTest="undefined-button-pe"
    style={
      Object {
        "display": "flex",
        "outline": "none",
      }
    }
    tabIndex={0}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "padding": "3px 8px 0 8px",
        }
      }
    >
      <SvgClock16
        style={
          Object {
            "paddingBottom": "2px",
            "paddingLeft": "6px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "padding": "2px 5px 2px 0",
        }
      }
    >
      <span
        data-dimensionid="pe"
        style={
          Object {
            "color": "#212934",
            "fontSize": "14px",
            "userSelect": "none",
            "wordBreak": "break-word",
          }
        }
      >
        Period
      </span>
      <RecommendedIcon
        dataTest="undefined-recommended-icon"
        isRecommended={false}
      />
    </div>
  </div>
  <div
    data-test="undefined-menu-pe"
    style={
      Object {
        "height": "20px",
        "left": "5px",
        "position": "relative",
        "width": "20px",
      }
    }
  />
</li>
`;

exports[`DimensionItem matches the snapshot with recommended 1`] = `
<li
  name="Period"
  onClick={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderRadius": "2px",
      "cursor": "pointer",
      "display": "flex",
      "marginBottom": 3,
      "marginTop": 3,
      "minHeight": "24px",
    }
  }
>
  <div
    className="label"
    dataTest="undefined-button-pe"
    style={
      Object {
        "display": "flex",
        "outline": "none",
      }
    }
    tabIndex={0}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "padding": "3px 8px 0 8px",
        }
      }
    >
      <SvgClock16
        style={
          Object {
            "paddingBottom": "2px",
            "paddingLeft": "6px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "padding": "2px 5px 2px 0",
        }
      }
    >
      <span
        data-dimensionid="pe"
        style={
          Object {
            "color": "#212934",
            "fontSize": "14px",
            "userSelect": "none",
            "wordBreak": "break-word",
          }
        }
      >
        Period
      </span>
      <RecommendedIcon
        dataTest="undefined-recommended-icon"
        isRecommended={true}
      />
    </div>
  </div>
</li>
`;

exports[`DimensionItem matches the snapshot with selected 1`] = `
<li
  name="Period"
  onClick={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e0f2f1",
      "borderRadius": "2px",
      "cursor": "pointer",
      "display": "flex",
      "fontWeight": 500,
      "marginBottom": 3,
      "marginTop": 3,
      "minHeight": "24px",
    }
  }
>
  <div
    className="label"
    dataTest="undefined-button-pe"
    style={
      Object {
        "display": "flex",
        "outline": "none",
      }
    }
    tabIndex={0}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "padding": "3px 8px 0 8px",
        }
      }
    >
      <SvgClock16
        style={
          Object {
            "paddingBottom": "2px",
            "paddingLeft": "6px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "padding": "2px 5px 2px 0",
        }
      }
    >
      <span
        data-dimensionid="pe"
        style={
          Object {
            "color": "#212934",
            "fontSize": "14px",
            "userSelect": "none",
            "wordBreak": "break-word",
          }
        }
      >
        Period
      </span>
      <RecommendedIcon
        dataTest="undefined-recommended-icon"
        isRecommended={false}
      />
    </div>
  </div>
</li>
`;
